s3fnet-lxc/experiment-data/PLC_Simple_Client_Server/1460649328/lxc1-0
Starting Debug for lxc1-0
Running Command /home/vignesh/Desktop/PLCs/awlsim-0.42/tests/run.sh -e 0 --node 1 /home/vignesh/Desktop/PLCs/awlsim-0.42/tests/modbus/simple_client_server_multiple/sfb102_client.awl
6 (process ID) old priority 0, new priority 10
=== Running tests with 'python2'
Running test 'sfb102_client.awl' with 'python2' ...   File "/home/vignesh/Desktop/PLCs/awlsim-0.42/tests/../awlsim-cli", line 232
    InputGen = __import__('Projects.' + str(Project_name) + '.conf.scripts.Input_Generator', globals(), locals(), ['generate_inputs'], -1))
                                                                                                                                          ^
SyntaxError: invalid syntax
=== TEST FAILED ===
Test 'sfb102_client.awl' FAILED
